# SpinChains

./: .gitignore  CMakeLists.txt  CommonLibs.h  GlobalVariables.cpp  GlobalVariables.h  NMSuperClass.cpp  NMSuperClass.h  NMSuperClassTest.cpp  NMSuperClassTest.h  NewSolver.cpp  NewSolver.h  Numerical_Methods_Class.cpp  Numerical_Methods_Class.h  README.md  SpinChainEigenSolverClass.cpp  SpinChainEigenSolverClass.h  TestClass.cpp  TestClass.h  common.h  linspace.cpp  linspace.h  main.cpp  matrix_operations.cpp  matrix_operations.h  progressbar.hpp  saveMatrix.cpp  saveMatrix.h
Legacy Files/: Numerical_Methods_Class_Legacy.h
NMSubClasses/: DebuggingTools.cpp  DebuggingTools.h  DemagField.cpp  DemagField.h  DipolarField.cpp  DipolarField.h  EffectiveField.cpp  EffectiveField.h  IDemagField.h  IDipolarField.h  IEffectiveField.h  ILLG.h  LLG.cpp  LLG.h  NMConfiguration.cpp  NMConfiguration.h  NMDataHandling.cpp  NMDataHandling.h  NMInitialisation.cpp  NMInitialisation.h  NMMethods.cpp  NMMethods.h  SystemDataContainer.h
Other/Legacy Files/: LegacySingleFileSolver.cpp  LegacySingleFileSolver.h  NewSolver.cpp  Numerical_Methods_Class_Legacy.cpp  Numerical_Methods_Class_Legacy.h
Other/Legacy_Files/: LegacySingleFileSolver.cpp  LegacySingleFileSolver.h  NewSolver.h  Numerical_Methods_Class_Legacy.h
Other/working_on/: SpinChainEigenSolverClass.cpp  SpinChainEigenSolverClass.h
checks_examples/: CommonTools.cpp  CommonTools.h  check_for_metal_device.cpp  check_for_metal_device.h
include/: BiasFields.h  CommonLibs.h  DemagField.h  DemagnetisationFields.h  DipolarField.h  DipolarFields.h  DzyaloshinskiiMoriyaInteraction.h  EffectiveField.h  EffectiveFields.h  ExchangeField.h  GlobalVariables.h  INMMethods.h  InterfaceSolversImplementation.h  LLG.h  MagnetisationDynamics.h  NMConfiguration.h  NMDataHandling.h  NMInitialisation.h  NMMethods.h  NMSuperClass.h  NMSuperClassTest.h  Numerical_Methods_Class.h  SimulationFlags.h  SimulationManager.h  SimulationParameters.h  SimulationStates.h  SolversConfiguration.h  SolversDataHandling.h  SolversImplementation.h  SolversInitialisation.h  SolversManager.h  SolversSuperClass.h  SpinChainEigenSolverClass.h  SpinTransferTorque.h  SystemDataContainer.h  linspace.h
libs/: CommonDefinitions.h  CommonStructures.h  CustomTimer.hpp  HashSpecialisation.h  LocalMetalResources.h  linspace.cpp  linspace.h  metal_config.h  progressbar.hpp  revised_progressbar.hpp
metal-cpp/Metal/: Metal.hpp
src/: BiasFields.cpp  CommonLibs.h  DemagField.cpp  DemagnetisationFields.cpp  DipolarField.cpp  DipolarFields.cpp  DzyaloshinskiiMoriyaInteraction.cpp  EffectiveField.cpp  EffectiveFields.cpp  ExchangeField.cpp  GlobalVariables.cpp  LLG.cpp  MagnetisationDynamics.cpp  NMConfiguration.cpp  NMDataHandling.cpp  NMInitialisation.cpp  NMMethods.cpp  NMSuperClass.cpp  NMSuperClassTest.cpp  NewSolver.cpp  Numerical_Methods_Class.cpp  SolversConfiguration.cpp  SolversDataHandling.cpp  SolversImplementation.cpp  SolversInitialisation.cpp  SolversManager.cpp  SolversSuperClass.cpp  SpinChainEigenSolverClass.cpp  SpinTransferTorque.cpp  SystemDataContainer.h  TestClass.cpp  coffeewitharch.metal  linspace.cpp  main.cpp
test/: IntelTBBTestIfWorking.cpp  IntelTBBTestIfWorking.h  mappingSpeedTests.hpp
